<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/game" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_marginTop="15dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundstyle"
        android:textColor="#0C0C73"
        android:text="@string/other"
        android:textSize="25sp"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/nach"
        android:gravity="center"
        android:textColor="#0C0C73"
        android:text="@string/play"
        android:textSize="35sp"
        android:textStyle="bold"
        android:onClick="go_to_game"/>



    <Button
        android:id="@+id/callname"
        android:layout_width="500dp"
        android:layout_centerHorizontal="true"
        android:layout_height="106dp"
        android:layout_marginTop="158dp"
        android:background="@drawable/roundstyle"
        android:text="@string/call"
        android:textColor="#0C0C73"
        android:textSize="60dp"/>


    <Button
        android:id="@+id/line"
        android:layout_width="500dp"
        android:layout_height="4dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/text_view_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="110dp"
        android:layout_alignParentBottom="true"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="50dp"
        />
</RelativeLayout>