<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img" />
    <Button
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/notf"
        android:id="@+id/good"
        android:textAlignment="center"
        android:textSize="35dp"
        android:textColor="#4a1517"
        android:background="@drawable/redsc"
        >

    </Button>
    <Button
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="150dp"
        android:alpha="0.4"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round">

    </Button>
    <Button
        android:id="@+id/next"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/good"
        android:alpha="0"
        android:background="@drawable/redsc">

    </Button>
    <Button
        android:id="@+id/go_fish"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/ye"
        android:layout_toLeftOf="@+id/next"
        android:textAlignment="center"
        android:textSize="40dp"
        android:layout_alignParentBottom="true"
        android:textColor="#4a1517"
        android:background="@drawable/redsc"
        android:onClick="go_fish"/>
    <Button
        android:id="@+id/go_menu"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/no"
        android:layout_toRightOf ="@+id/next"
        android:textAlignment="center"
        android:textSize="40dp"
        android:layout_alignParentBottom="true"
        android:textColor="#4a1517"
        android:background="@drawable/redsc"
        android:onClick="go_menu"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="206dp"
        android:layout_height="233dp"
        android:layout_alignParentStart="true"
        android:translationZ="90dp"

        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="134dp"
        android:width="50dp"
        android:height="50dp"
        android:background="@drawable/notoke"
        android:gravity="center"
        android:onClick="go_to_2" />


</RelativeLayout>